# gatech-blockchain-project-sp23

./: DSchain.sol  README.md
TFHE/decrypt/src/: main.rs
TFHE/operation/: Cargo.toml
TFHE/operation/src/: main.rs
contracts/: DSchain.sol
decrypt/: Cargo.toml
diagrams/: overview.drawio  report.html
encrypt/: Cargo.toml
encrypt/src/: main.rs
encryption-testing/aes-enc/: Cargo.toml
encryption-testing/rsa-enc/: Cargo.toml
encryption-testing/tfhe-enc/src/: main.rs
encrytpion-testing/aes-enc/src/: main.rs
encrytpion-testing/tfhe-enc/: Cargo.toml
eth/data/miner/geth/: jwtsecret  nodekey
eth/data/miner/keystore/: UTC--2023-03-13T22-04-46.370229007Z--7d01a594ee79618d5db9db3b272fbf03f9ebda77
eth/data/node1/geth/: jwtsecret  nodekey  transactions.rlp
eth/setup/: boot.key  genesis.json  node_addresses
frontend/: dataowner.html  datarequester.html  index.html  reference.js  style.css
hyperledger-caliper/: report.html
hyperledger-caliper/simple/: addSubscriber.js  config.yaml  getHash.js  getNotification.js  getSubscriber.js  joinNetwork.js  uploadHash.js
hyperledger-caliper/simple/utils/: operation-base.js  simple-state.js
iomt/: wustl-healthonly.ods
iomt-data/convert/: wustl-healthonly.csv
iomt/convert/: wustl-onlyint-testing-FHE.csv  wustl-onlyint-testing.csv  wustl-onlyint.csv
key_management/: Cargo.toml
key_management/src/: main.rs
rsa-enc/src/: main.rs
scripts/: IPFSsetup.txt  blockchain.sh  csvconvert.py  ipfs_download.sh  ipfs_upload.sh
testing/: Cargo.toml
testing/src/: main.rs
zama_concrete/: Cargo.toml
zama_concrete/src/: main.rs
(+27 files in other folders)
