[package]
name = "key_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = { version = "0.2.0", features = [ "booleans", "shortints", "integers", "serde"] }
tfhe = { version = "*", features = ["boolean", "shortint", "x86_64-unix"] }
bincode = "1.3.3"
hex = "0.4.3"
serde = "1.0.158"
hex-serde = "0.1.0"
serde_json = { version = "1.0"}

[profile.release]
lto = "fat"
