[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = { version = "0.2.0", features = [ "booleans", "shortints", "integers", "serde"] }
tfhe = { version = "*", features = [ "boolean", "shortint", "x86_64-unix" ] }
bincode = "1.3.3"
serde = "1.0.158"
hex = "0.4.3"
base64 = "0.21.0"
compressed_string = "1.0.0"
string = "0.3.0"
csv = "1.1"

[profile.release]
lto = "fat"
