[package]
name = "zama_concrete"
version = "0.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = { version = "0.2.0", features = [ "booleans", "shortints", "integers", "serde"] }
tfhe = { version = "*", features = [ "boolean", "shortint", "x86_64-unix" ] }
bincode = "1.3.3"
serde = "1.0.158"
hex = "0.4.3"
base64 = "0.21.0"

[profile.release]
lto = "fat"